; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_uart.c_UARTParityModeGet.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_uart.c_UARTParityModeGet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UART_O_LCRH = common dso_local global i64 0, align 8
@UART_LCRH_SPS = common dso_local global i64 0, align 8
@UART_LCRH_EPS = common dso_local global i64 0, align 8
@UART_LCRH_PEN = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @UARTParityModeGet(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = call i32 @UARTBaseValid(i64 %3)
  %5 = call i32 @ASSERT(i32 %4)
  %6 = load i64, i64* %2, align 8
  %7 = load i64, i64* @UART_O_LCRH, align 8
  %8 = add i64 %6, %7
  %9 = call i64 @HWREG(i64 %8)
  %10 = load i64, i64* @UART_LCRH_SPS, align 8
  %11 = load i64, i64* @UART_LCRH_EPS, align 8
  %12 = or i64 %10, %11
  %13 = load i64, i64* @UART_LCRH_PEN, align 8
  %14 = or i64 %12, %13
  %15 = and i64 %9, %14
  ret i64 %15
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @UARTBaseValid(i64) #1

declare dso_local i64 @HWREG(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
